--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,14 @@
   --contacts-color: rgba(255, 255, 255, 0.6);
 }
 
+/* Глобальный border-box */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* Оформлення сторінки Студія */
 
 body {
@@ -19,7 +27,14 @@ body {
 
 } 
 
+h1,h2,h3,h4,h5,h6{
+  padding: 0;
+  margin: 0;
+}
+
 .list{
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 .link{
@@ -37,6 +52,19 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
+
+/* Container */
+
+.container{
+  
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+
+  outline: 2px solid tomato;
+  
+}
+
 /* Логотип */
 
 .logo{
@@ -87,10 +115,21 @@ font-family: 'Raleway';
 /* Шапка */
 
 .hero{
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-top: 0;
+  margin-bottom: 0;
   background-color:var(--grey-bg-color);
+
+  text-align: center;
+
+  outline: 2px solid tomato;
 }
 
 .hero-text{
+  margin-top: 0;
+  margin-bottom: 40px;
+
   color:var(--white-color);
 
     font-weight: 900;
@@ -101,14 +140,23 @@ font-family: 'Raleway';
 }
 
 .hero .button{
+  display: inline-block;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 216px;
+
+  color: var(--white-color);
   background-color: var(--blue-color);
-  color:var(--white-color);
   cursor: pointer;
 
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
+    text-align: center;
 }
+
+
 
 /* Секції */
 
@@ -117,24 +165,36 @@ color: var(--secondary-color-text);
 
 }
 /* Особливості */
-.features .section-title{
+.section.description{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
-font-weight: 700;
+.features .section-title{
+  margin-bottom: 10px;
+
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
 }
 
 .features-text{
-
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 /* Чим ми займаємося */
 
+.section.examples{
+  padding-bottom: 94px;
+}
+
 .examples .section-title{
+    margin-bottom: 50px;
   
     font-weight: 700;
     font-size: 36px;
@@ -144,44 +204,68 @@ font-weight: 700;
 
 /* Наша команда */
 .section.team{
+  
+
   background-color: var(--team-bg-color);
 }
-.members .text{
 
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+.members .text{
+  padding: 0;
+  margin: 0;
+
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .team .section-title{
+  padding-bottom: 50px;
   
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
 }
 .members .section-title{
+  padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
   
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 /* Футер */
 .footer{
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   background-color: var(--grey-bg-color);
 }
+
+.footer-logo{
+  padding-top: 0px;
+  margin-bottom: 20px;
+
+}
+
 .footer-address{
+
   font-style: normal;
 }
 
 .footer-address .text{
+  padding: 0;
+  margin: 0;
+  margin-bottom: 9px;
+
   color: var(--white-color);
 
-    font-size: 17px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+  font-size: 17px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .footer-contacts .link{
@@ -195,6 +279,10 @@ font-weight: 700;
 
 .footer-text{
   color: var(--white-color);
+}
+
+.footer-contacts .item:not(:last-child){
+  margin-bottom: 9px;
 }
 
 /* Оформлення сторінки Студія */
