--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,18 @@ body {
 
 } 
 
-h1,h2,h3,h4,h5,h6{
-  padding: 0;
-  margin: 0;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+padding: 0;
+margin: 0;
 }
+
+
 
 .list{
   padding: 0;
@@ -56,16 +64,28 @@ h1,h2,h3,h4,h5,h6{
 /* Container */
 
 .container{
-  
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
 
-  outline: 2px solid tomato;
-  
+}
+
+/* Page-header */
+
+.page-header{
+  border-bottom: 1px solid #ECECEC;
 }
 
 /* Логотип */
+
+.main-nav .logo{
+  display: inline-block;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  margin-right: 93px;
+}
 
 .logo{
 color:var(--black-color);
@@ -84,6 +104,25 @@ font-family: 'Raleway';
 
 /* Навігація */
 
+.main-nav{
+  display: flex;
+  align-items: center;
+  
+}
+
+.site-nav{
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.site-nav .item{
+  margin-right: 50px;
+}
+.site-nav .item:last-child{
+  margin-right: 0;
+}
+
 .site-nav .link{
   color:var(--black-color);
 
@@ -97,6 +136,21 @@ font-family: 'Raleway';
 .site-nav .link:focus{
   color: var(--blue-color);
 }
+
+
+.contacts-nav{
+  display: flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  margin-left: auto;
+
+}
+
+.contacts-nav .item:not(:last-child){
+  margin-right: 50px;
+}
+
+
 
 .contacts-nav .link{
   color:var(--primary-color-text);
@@ -123,7 +177,7 @@ font-family: 'Raleway';
 
   text-align: center;
 
-  outline: 2px solid tomato;
+  
 }
 
 .hero-text{
@@ -170,6 +224,21 @@ color: var(--secondary-color-text);
   padding-bottom: 94px;
 }
 
+.features{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+.features .item{
+  width: 270px;
+  margin-right: 30px;
+}
+
+.features .item:nth-child(4n){
+  margin-right: 0;
+}
+
 .features .section-title{
   margin-bottom: 10px;
 
@@ -188,6 +257,23 @@ color: var(--secondary-color-text);
 }
 
 /* Чим ми займаємося */
+.job{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.job .item{
+  width: 370px;
+  margin-right: 30px;
+}
+
+.job img{
+  display: block;
+}
+
+.job .item:nth-child(3n){
+  margin-right: 0;
+}
 
 .section.examples{
   padding-bottom: 94px;
@@ -200,13 +286,14 @@ color: var(--secondary-color-text);
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    text-align: center;
 }
 
 /* Наша команда */
 .section.team{
-  
-
   background-color: var(--team-bg-color);
+
+  text-align: center;
 }
 
 .members .text{
@@ -235,6 +322,29 @@ color: var(--secondary-color-text);
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+.members {
+  display: flex;
+  flex-wrap: wrap;
+
+  padding-bottom: 94px;
+}
+
+.members img{
+  margin-bottom: 30px;
+}
+
+.members .item{
+  width: 270px;
+  height: 368px;
+  border-radius: 0px 0px 4px 4px;
+
+  margin-right: 30px
+}
+
+.members .item:nth-child(4n){
+  margin-right: 0;
 }
 
 /* Футер */
@@ -290,16 +400,31 @@ color: var(--secondary-color-text);
 /* Фільтри */
 
 .filters{
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+
+
   color: var(--secondary-color-text);
 }
 
+.filters .item:not(:last-child){
+  margin-right: 8px;
+}
+
 .filters .button{
+  margin: 0;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border-color: transparent;
+
   background-color: var(--team-bg-color);
   cursor: pointer;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
 }
 
 .filters .button:hover,
@@ -311,6 +436,12 @@ color: var(--secondary-color-text);
 
 /* Наші роботи */
 
+.portfolio{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+
 .work-list .work-text{
 color: var(--primary-color-text);
 
@@ -318,10 +449,47 @@ color: var(--primary-color-text);
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
-.work-list .section-title{
 
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+.work-text{
+  padding: 0;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 20px;
+  margin: 0;
+}
+
+.work-list .section-title{
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-bottom: 4px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.work-list img{
+  margin-bottom: 20px;
+}
+
+.work-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-list .item{
+  width: 370px;
+  height: 404px;
+  border: 1px solid #EEEEEE;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.work-list .item:nth-child(3n){
+  margin-right: 0;
+}
+
+.work-list .item:nth-last-child(-n+3) {
+  margin-bottom: 0;
 }
