--- a/css/styles.css
+++ b/css/styles.css
@@ -181,9 +181,9 @@ font-family: 'Raleway';
 }
 
 .hero-text{
-  margin-top: 0;
+  margin: 0 auto;
   margin-bottom: 40px;
-
+  max-width: 696px;
   color:var(--white-color);
 
     font-weight: 900;
@@ -291,6 +291,9 @@ color: var(--secondary-color-text);
 
 /* Наша команда */
 .section.team{
+  padding-top: 94px;
+  padding-bottom: 94px;
+
   background-color: var(--team-bg-color);
 
   text-align: center;
@@ -328,7 +331,6 @@ color: var(--secondary-color-text);
   display: flex;
   flex-wrap: wrap;
 
-  padding-bottom: 94px;
 }
 
 .members img{
@@ -336,11 +338,14 @@ color: var(--secondary-color-text);
 }
 
 .members .item{
+  padding-bottom: 30px;
+  margin-right: 30px;
   width: 270px;
-  height: 368px;
   border-radius: 0px 0px 4px 4px;
 
-  margin-right: 30px
+  background-color: var(--white-color);
+
+  
 }
 
 .members .item:nth-child(4n){
@@ -452,15 +457,12 @@ color: var(--primary-color-text);
 
 .work-text{
   padding: 0;
-  padding-right: 24px;
-  padding-left: 24px;
   padding-bottom: 20px;
   margin: 0;
 }
 
 .work-list .section-title{
-  padding-left: 24px;
-  padding-right: 24px;
+ 
   margin-bottom: 4px;
 
   font-weight: 700;
@@ -470,7 +472,7 @@ color: var(--primary-color-text);
 }
 
 .work-list img{
-  margin-bottom: 20px;
+  display: block;
 }
 
 .work-list{
@@ -478,10 +480,16 @@ color: var(--primary-color-text);
   flex-wrap: wrap;
 }
 
+.work-description{
+  padding: 20px 24px;
+  border-right: 1px solid #EEEEEE;
+  border-bottom: 1px solid #EEEEEE;
+  border-left: 1px solid #EEEEEE;
+}
+
 .work-list .item{
   width: 370px;
-  height: 404px;
-  border: 1px solid #EEEEEE;
+  
   margin-right: 30px;
   margin-bottom: 30px;
 }
