--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ color: var(--secondary-color-text);
 }
 
 .section.examples{
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 
@@ -309,7 +310,7 @@ color: var(--secondary-color-text);
 }
 
 .team .section-title{
-  padding-bottom: 50px;
+  margin-bottom: 50px;
   
   font-weight: 700;
   font-size: 36px;
